# KernelQuest-Game

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HOWTOPLAY.md  LICENSE  README.md  ROADMAP.md  kernelquest.spec  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: AUDIO_STEMS.md  LORE.md  PRD_AND_ARCH.md
src/kernelquest/: __init__.py  main.py
src/kernelquest/core/: __init__.py  config.py  engine.py  menu_controller.py  playing_controller.py  run_progress.py  settings.py  state.py
src/kernelquest/core/states/: __init__.py  base.py  hub_states.py  (+8 more)
src/kernelquest/data/: __init__.py  database.py  distros_catalog.py  lore_catalog.py  migrations.py  repositories.py  upgrades_catalog.py
src/kernelquest/entities/: __init__.py  affix.py  boss_phases.py  daemon.py  damage.py  entity.py  items.py  malware.py  malware_registry.py  patch.py  player.py  program.py  skip_tag.py
src/kernelquest/systems/: __init__.py  ai.py  combat.py  daemons.py  fov.py  inventory.py  pathfinding.py  programs.py
src/kernelquest/ui/: __init__.py  cinematics.py  console_log.py  dialogue.py  explain.py  fx.py  glyphs.py  i18n.py  music.py  renderer.py  sfx.py  sprites.py  theme.py  themes.py  viewport.py
src/kernelquest/world/: __init__.py  boss_arenas.py  daily.py  generator.py  grid.py  tile.py  tutorial_range.py  world.py
tests/: test_ai.py  test_combat.py  test_console_log.py  test_database.py  test_fov.py  test_fx.py  test_generator.py  test_glyphs.py  test_grid.py  test_i18n_glossary.py  test_items.py  test_malware.py  test_pathfinding.py  test_phase10.py  test_phase11.py  test_phase12_abort.py  test_phase12_boot_map.py  test_phase12_boss_dev.py  test_phase12_cinematic.py  test_phase12_dialogue.py  test_phase12_hubs.py  test_phase12_hud.py  test_phase12_ladder.py  test_phase12_lore.py  test_phase12_menu_music.py  test_phase12_phase_shift.py  test_phase12_tutorial.py  test_phase12_vendor.py  test_phase4_repositories.py  test_phase5_daemons.py  test_phase5_misc.py  test_phase5_patch.py  test_phase5_programs.py  test_phase5_repositories.py  test_phase6.py  test_phase7_cinematics.py  test_phase7_lore.py  test_phase8.py  test_phase9.py  test_player.py  (+5 more)
tests/core/: test_states.py
(+3 files in other folders)
