[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelquest"
version = "3.0.0"
description = "Kernel Quest: The Memory Leak — a Tron-flavored, grid-based rogue-like."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Kernel Quest Contributors" }]
keywords = ["game", "pygame", "roguelike", "rpg", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
]
dependencies = [
    "pygame>=2.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "black>=24.3",
    "mypy>=1.10",
]

[project.scripts]
kernelquest = "kernelquest.main:main"

[project.urls]
Homepage = "https://github.com/your-user/KernelQuest-Game"
Issues = "https://github.com/your-user/KernelQuest-Game/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kernelquest = ["assets/**/*"]

# ---------- Tooling ----------

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/kernelquest"]
mypy_path = "src"
explicit_package_bases = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["pygame.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["kernelquest"]

[tool.coverage.report]
show_missing = true
skip_covered = true
